# moex-data-api

./: .env.dist  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg
app/: schemas.py
moex_fastapi/: main.py  schemas.py  services.py  utils.py
tests/: conftest.py  fixtures.py  test_main.py
